# ouroboros-consensus

./: cabal.project
docs/utxo-hd/utxo-db/: utxo-db-api.tex
docs/utxo-hd/v0.1/: for-developers.md
docs/website/docs/: bootstrap-peers-IER.md
ouroboros-consensus/: ouroboros-consensus.cabal
ouroboros-consensus-cardano/: ouroboros-consensus-cardano.cabal
ouroboros-consensus-cardano/src/cardano-testlib/Test/Consensus/Cardano/: Examples.hs  Generators.hs  ProtocolInfo.hs
ouroboros-consensus-cardano/src/cardano-testlib/Test/ThreadNet/Infra/: ShelleyBasedHardFork.hs
ouroboros-consensus-cardano/src/cardano-testlib/Test/ThreadNet/TxGen/: Cardano.hs
ouroboros-consensus-cardano/src/ouroboros-consensus-cardano/Ouroboros/Consensus/Cardano/: CanHardFork.hs  Node.hs  ProtocolVersions.hs
ouroboros-consensus-cardano/src/shelley/Ouroboros/Consensus/Shelley/: ShelleyHFC.hs
ouroboros-consensus-cardano/src/shelley/Ouroboros/Consensus/Shelley/Ledger/: Query.hs
ouroboros-consensus-cardano/src/shelley/Ouroboros/Consensus/Shelley/Node/: TPraos.hs
ouroboros-consensus-cardano/src/tools/Cardano/Tools/DBAnalyser/Block/: Cardano.hs
ouroboros-consensus-cardano/src/tools/Cardano/Tools/ImmDBServer/: Diffusion.hs  MiniProtocols.hs
ouroboros-consensus-cardano/test/cardano-test/Test/ThreadNet/: MaryAlonzo.hs
ouroboros-consensus-diffusion/: ouroboros-consensus-diffusion.cabal
ouroboros-consensus-diffusion/src/diffusion-testlib/Test/ThreadNet/: Network.hs  TxGen.hs
ouroboros-consensus-diffusion/test/consensus-test/Test/Consensus/HardFork/: Combinator.hs
ouroboros-consensus/src/consensus-testlib/Test/Ouroboros/Consensus/ChainGenerator/: Honest.hs  Params.hs
ouroboros-consensus/src/consensus-testlib/Test/Util/Orphans/: Arbitrary.hs
ouroboros-consensus/src/ouroboros-consensus/Data/SOP/: NonEmpty.hs
ouroboros-consensus/src/ouroboros-consensus/Ouroboros/Consensus/HardFork/: Combinator.hs
ouroboros-consensus/src/ouroboros-consensus/Ouroboros/Consensus/HardFork/Combinator/: Abstract.hs  AcrossEras.hs  Block.hs  Compat.hs  Forging.hs  InjectTxs.hs  Ledger.hs  Lifting.hs  Mempool.hs  Protocol.hs  State.hs  Translation.hs
ouroboros-consensus/src/ouroboros-consensus/Ouroboros/Consensus/HardFork/History/: Qry.hs  Summary.hs
ouroboros-consensus/src/ouroboros-consensus/Ouroboros/Consensus/Util/: Orphans.hs
ouroboros-consensus/test/consensus-test/Test/Consensus/HardFork/: Forecast.hs  History.hs  Infra.hs
ouroboros-consensus/test/infra-test/: Main.hs
ouroboros-consensus/test/storage-test/Test/Ouroboros/Storage/ChainDB/: Model.hs
sop-extras/: sop-extras.cabal
sop-extras/src/Data/SOP/: Counting.hs  InPairs.hs  Index.hs  Match.hs  NonEmpty.hs  OptNP.hs  Telescope.hs
strict-sop-core/: CHANGELOG.md  strict-sop-core.cabal
strict-sop-core/src/Data/SOP/Strict/: NP.hs  NS.hs  Tails.hs
strict-sop-extras/: strict-sop-extras.cabal
strict-sop-extras/src/Data/SOP/Strict/: Counting.hs  Functors.hs  InPairs.hs  Index.hs  Lenses.hs  Match.hs  NonEmpty.hs  OptNP.hs  Telescope.hs
(+23 files in other folders)
