cabal-version:   3.0
name:            sop-extras
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          IOHK Engineering Team
maintainer:      operations@iohk.io
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wpartial-fields -Widentities
    -Wredundant-constraints -Wmissing-export-lists -Wunused-packages
    -Wno-unticked-promoted-constructors

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    Data.SOP.Counting
    Data.SOP.Functors
    Data.SOP.Index
    Data.SOP.InPairs
    Data.SOP.Lenses
    Data.SOP.Match
    Data.SOP.NonEmpty
    Data.SOP.OptNP
    Data.SOP.Tails
    Data.SOP.Telescope

  build-depends:
    , base      >=4.16 && <4.19
    , strict-sop-core
    , nothunks  ^>=0.1
    , sop-core  ^>=0.5
    , these     ^>=1.2

  default-language: Haskell2010
